tests/rosetta/out/Smalltalk/atomic-updates.out
/tmp/atomic-updates.st:11: parse error, expected ']'
